@@ -2,6 +2,7 @@
 
 * Allow the chaining of conditions off of a search object. Ex: search.username_like("bjohnson").age_gt(20).all
 * Split out left outer join creation into its own method, allowing you to use it in your own named scopes.
+* Make sure the search objects clone properly.
 
 == 2.0.0
 
